# aibox

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/assests/: style.css
src/assets/: codeblockcopy.js  get.sh
src/components/: dialog_components.rs  message_components.rs  mod.rs
src/gpt/: gpt.rs  mod.rs  types.rs
