[package]
name = "aibox"
version = "0.1.0"
edition = "2021"
description = "Desktop app for AI tool interaction, like ChatGPT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
dioxus-router = "0.3.0"
rand = "0.8.5"
tokio = "1.27.0"
