[package]
name = "aibox"
version = "0.1.0"
edition = "2021"
description = "Desktop app for AI tool interaction, like ChatGPT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "8bf2475802d989f9ef0d7bcdfaaf96daac2f94bf" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", rev = "8bf2475802d989f9ef0d7bcdfaaf96daac2f94bf" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus", rev = "8bf2475802d989f9ef0d7bcdfaaf96daac2f94bf" }
rand = "0.8.5"
tokio = "1.28.0"
reqwest = { version = "0.11.15", features = ["socks"] }

serde_json = "1.0.96"
serde = { version = "1.0.162", features = ["derive"] }