[package]
name = "aibox"
version = "0.1.0"
edition = "2021"
description = "Desktop app for AI tool interaction, like ChatGPT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "8bf2475802d989f9ef0d7bcdfaaf96daac2f94bf" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", rev = "8bf2475802d989f9ef0d7bcdfaaf96daac2f94bf" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus", rev = "8bf2475802d989f9ef0d7bcdfaaf96daac2f94bf" }
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.8.1"
reqwest = { version = "0.11.15", features = ["socks"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = "1.28.0"


[dev-dependencies]
tokio-test = "0.4.2"
